# solid-and-fast-ranges

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: main.cpp
tools/docker/: Dockerfile  compose.yml
tools/shells/: build_docker_image.sh  clean.sh  compile.sh  destroy_docker_image.sh  gen_cmake.sh  init_variables.sh  install_prerequisites.sh  kill.sh  make_package.sh  run.sh  start_container.sh  start_gdbserver.sh  stop_container.sh
